--- a/Prontocloud/css/style.css
+++ b/Prontocloud/css/style.css
@@ -22,7 +22,8 @@ body {
    float: left;
    padding: 20px;
    width: 100%;
-   margin: 0 auto;
+   margin: 0;
+   height: auto;
 }
 
 
@@ -65,6 +66,8 @@ p{
  line-height: 1.4;
 
 }
+
+
 
 ol{
  margin-left: 30px;
@@ -122,4 +125,9 @@ footer {
 footer small {
    font-size: 80%;
    display: block;
+}
+
+#Tenho-interesse {
+    width: 100%;
+    background-color: aquamarine;
 }
