--- a/Prontocloud/css/style.css
+++ b/Prontocloud/css/style.css
@@ -131,3 +131,15 @@ footer small {
     width: 100%;
     background-color: aquamarine;
 }
+
+@media (max-width: 425px) {
+    section nav,
+    section article {
+        width: 100%;
+    }  
+
+    .container {
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+}
